--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@
 [build-system]
 requires = [
     "setuptools>=61.0",
-    "wheel"
+    "wheel",
+    "qibo==0.1.12"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -61,6 +62,17 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+
+[project.optional-dependencies]
+ci = ["black",
+      "flake8",
+      "bandit",
+      "pytest",
+      "pytest-cov[all]"
+]
+notebooks = ["jupyter"]
+qchip = ["qiboconnection==0.12.0"]
+pycompss = ["pycompss"]
 
 [tool.setuptools.dynamic]
 version = {attr = "qdislib.__version__"}
