Modified to force 80 char lines.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,9 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-ci = ["black",
+ci = ["pycodestyle",
+      "pydocstyle",
+      "black",
       "flake8",
       "bandit",
       "pylint",
