--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ requires = [
     "setuptools>=61.0",
     "wheel",
     "qibo==0.1.12"
+    "numpy",
+    "networkx",
+    "matplotlib"
 ]
 build-backend = "setuptools.build_meta"
 
