--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@
 requires = [
     "setuptools>=61.0",
     "wheel",
-    "qibo>=0.1.12",
+    "qibo<=0.1.12",
     "numpy",
     "networkx",
     "matplotlib"
