Changed src layout to flat layout. Added coverage script.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ maintainers = [
 description = "The quantum distributed computing library on top of PyCOMPSs"
 # url="https://Qdislib.bsc.es",
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.7"
 license = { file = "LICENSE" }
 keywords = ["quantum", "distributed computing", "PyCOMPSs", "COMPSs"]
 classifiers = [
@@ -89,6 +89,12 @@ pycompss = ["pycompss",
 [tool.setuptools.dynamic]
 version = { attr = "Qdislib.__version__" }
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["Qdislib*"]
+exclude = ["notebooks"]
+namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
+
 [project.urls]
 Homepage = "https://Qdislib.bsc.es"
 Documentation = "https://Qdislib.readthedocs.io"
@@ -98,6 +104,14 @@ Documentation = "https://Qdislib.readthedocs.io"
 
 # [project.scripts]
 # Qdislib-cli = "Qdislib:main_cli"
+
+[tool.coverage.report]
+fail_under = 80
+
+[tool.coverage.run]
+branch = true
+source = ["Qdislib"]
+command_line = "-m unittest discover -s tests/"
 
 [tool.bandit]
 exclude_dirs = ["notebooks/",
