Content added. Updated dependencies. Added readthedocs yaml.

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,14 @@ target/
 
 # Tests
 *.log
+
+# Ignore documentation builds
+_build/
+build/
+
+# Ignore python folders
+.ipynb_checkpoints/
+__pycache__/
+
+# Ignore building virtual environment
+documentation-builder/
