--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ symengine>=0.11,<0.14
 igraph>=0.11.8
 qiskit>=1.1.0
 qiskit_aer>=0.15.1
+qibo>=0.1.12
+qiboconnection>=0.12.0
 networkx>=3.1
+matplotlib>=3.4.3
