--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ typing-extensions
 symengine>=0.11,<0.14
 igraph>=0.11.8
 qiskit>=1.1.0
+qiskit-addon-cutting>=0.10.0
 qiskit_aer>=0.15.1
 qibo>=0.1.12
 networkx>=3.1
