add documentation and example jupyter notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ requires = [
     "qibo<=0.1.12",
     "numpy",
     "networkx",
-    "matplotlib"
+    "matplotlib",
+    "pymetis"
 ]
 build-backend = "setuptools.build_meta"
 
