--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,7 +13,7 @@ build:
 
 # Build documentation in the source/ directory with Sphinx
 sphinx:
-   configuration: doc/source/conf.py
+   configuration: docs/source/conf.py
 
 # # Build formats apart from html
 # formats:
@@ -22,4 +22,4 @@ sphinx:
 # Python details
 python:
   install:
-    - requirements: doc/requirements.txt
+    - requirements: docs/requirements.txt
