Updated notebook to plot the circuits as pictures.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ typing
 typing-extensions
 symengine>=0.11,<0.14
 igraph>=0.11.8
-qiskit>=1.1.0
+qiskit>=1.1.0,<2.0.0
 qiskit-addon-cutting>=0.10.0
 qiskit_aer>=0.15.1
 qibo>=0.1.12
